Extract preview panel UI labels